# zetapay

./: .eslintrc.json  .gitignore  .prettierignore  README.md  eslint.config.mjs  next.config.ts  package.json
circuits/payroll/: Nargo.toml  Prover.toml  Prover.usdc.toml  README.md  Verifier.toml
circuits/payroll/circuits/: payroll.circom
circuits/payroll/inputs/: xlm.json
circuits/payroll/scripts/: export-fixtures.js  generate-inputs.js
circuits/payroll/src/: main.nr
contracts/: Cargo.toml
contracts/payroll/: Cargo.toml
contracts/payroll/src/: contract.rs  events.rs  lib.rs  storage.rs  test.rs  verifier.rs  zk_verifier.rs
contracts/payroll/test_snapshots/test/: test_get_stats_multiple_batches.1.json  test_initialize_contract.1.json  test_short_proof_fails.1.json  test_submit_batch_wrong_total_fails.1.json  test_submit_dynamic_batch_five_employees.1.json  test_submit_single_employee_batch.1.json
contracts/zetapay-payroll/src/: contract.rs  error.rs  fixtures.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/zetapay-payroll/test_snapshots/test/: execute_batch_rejects_unknown_batch.1.json  execute_batch_transfers_xlm_and_usdc_once.1.json  payroll_run_summary_tracks_submission_and_execution.1.json  submit_batch_rejects_duplicate_proof.1.json  submit_batch_rejects_payment_totals_that_do_not_match_proof.1.json  submit_batch_rejects_wrong_commitment_root.1.json  submit_batch_verifies_real_groth16_proof_and_stores_encrypted_record.1.json
contracts/zetapay-pool/src/: contract.rs  error.rs  fixtures.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/zetapay-pool/test_snapshots/test/: deposit_note_rejects_duplicate_commitment.1.json  fund_payroll_allows_withdrawal_after_single_funding_call.1.json  fund_payroll_posts_root_and_deposits_note_in_one_call.1.json  fund_payroll_rejects_duplicate_commitment.1.json  withdraw_rejects_double_spend_with_real_nullifier.1.json  withdraw_rejects_unknown_root_before_verifier.1.json  withdraw_with_real_groth16_proof_transfers_funds_and_spends_nullifier.1.json
contracts/zetapay-verifier/src/: fixtures.rs  lib.rs  test.rs
contracts/zk-payroll/: Cargo.toml
contracts/zk-payroll/src/: contract.rs  error.rs  fixtures.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/zk-payroll/test_snapshots/test/: execute_batch_rejects_unknown_batch.1.json  execute_batch_transfers_xlm_and_usdc_once.1.json  payroll_run_summary_tracks_submission_and_execution.1.json  submit_batch_rejects_duplicate_proof.1.json  submit_batch_rejects_payment_totals_that_do_not_match_proof.1.json  submit_batch_rejects_wrong_commitment_root.1.json  submit_batch_verifies_real_groth16_proof_and_stores_record.1.json  test_submit_payroll_fails_with_no_payees.1.json  test_submit_payroll_with_valid_setup.1.json
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: fixtures.rs  lib.rs  test.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
drizzle/migrations/: 0000_dashing_spacker_dave.sql  0000_fair_expediter.sql  0000_hard_ink.sql  0000_overrated_silver_sable.sql  0000_quiet_stone_men.sql  0000_silky_nicolaos.sql  0000_wise_edwin_jarvis.sql
scripts/: build-payroll.sh  debug-vk.js  export-payroll-fixtures.js  generate-commitment.js  generate-proof.ts  install-stellar-cli.mjs  verify-proof.js
scripts/contracts/: initialize.ts
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/(marketing)/: not-found.tsx  page.tsx
src/app/api/audit/verify/: route.ts
src/app/api/auth/session/: route.ts
src/app/api/employees/: route.ts
src/app/api/employees/[id]/: route.ts
src/app/api/payroll/: route.ts
src/app/api/payroll/[id]/: route.ts
src/app/api/payroll/pool/: route.ts
src/app/api/stellar/balance/: route.ts
src/app/api/stellar/send/: route.ts
src/app/auditor/: page.tsx
src/app/auth/employer/connect/: page.tsx
src/app/dashboard/: layout.tsx
src/app/dashboard/auditor/: layout.tsx  page.tsx
src/app/dashboard/auditor/history/: page.tsx
src/app/dashboard/auditor/reports/: page.tsx
src/app/dashboard/auditor/verify/: page.tsx
src/app/dashboard/employee/payroll/: page.tsx
src/app/dashboard/employer/: layout.tsx  page.tsx
src/app/dashboard/employer/employees/: page.tsx
src/app/dashboard/employer/history/: page.tsx
src/app/dashboard/employer/payroll/: page.tsx
src/app/employee/payroll/: page.tsx
src/app/employer/: page.tsx
src/app/role/: page.tsx
src/components/auth/: AuditorLoginForm.tsx  AuditorSignupForm.tsx  EmployerConnect.tsx  RoleSelection.tsx
src/components/dashboard/employees/: AddPersonForm.tsx  PersonTable.tsx  PersonnelManager.tsx
src/components/dashboard/payroll/: PaymentForm.tsx  PersonInfoCard.tsx  PersonSearchSelect.tsx  QuickTips.tsx  RecentRecipients.tsx
src/components/home/: AccessViews.tsx  CTA.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  PayrollFlow.tsx  Roadmap.tsx  SecurityModel.tsx
src/components/shared/: Footer.tsx  Navbar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  PageHeader.tsx
src/config/: constants.ts  database.ts
src/lib/db/: schema.ts
src/lib/stellar/: client.ts  freighter.ts  horizon.ts  server.ts
src/lib/supabase/: client.ts  server.ts
src/lib/zetapay/contracts/: config.ts  payroll.ts  pool.ts  types.ts  verification-key.ts
src/lib/zetapay/proof/: generate-payroll-proof.ts
src/lib/zk/: merkle.ts  prover.ts
src/lib/zk/circuits/: payroll.json
src/types/: payroll.ts  person.ts  zk.ts
(+25 files in other folders)
