# ZetaPay Smart Contracts Workspace
# 
# This workspace contains two Soroban smart contracts:
# - payroll: Main payroll processing contract with ZK verification
# - zk_verifier: ZK proof verification contract using Protocol 26
#
# Built for Stellar Protocol 26 with BN254 host function support

[workspace]
members = [
    "./payroll",
    "./zk_verifier",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
