# ZetaPay Smart Contracts Workspace
#
# Single unified payroll crate combining execution and ZK verification.
# Built for Stellar Testnet targeting Protocol 21+ (soroban-sdk v21).
# BN254 pairing-based UltraHonk proof verification will be enabled when
# Protocol 26 bn254_pairing host functions are activated on-chain.

[workspace]
members = [
    "./payroll",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "21.7.0"

[profile.release]
opt-level     = "z"
overflow-checks = true
debug           = 0
strip           = "symbols"
debug-assertions = false
panic           = "abort"
codegen-units   = 1
lto             = true
