# ZetaPay Smart Contracts Workspace
#
# Single unified payroll crate combining execution and ZK verification.
# Built for Stellar Testnet targeting Protocol 26 (soroban-sdk v26).
# Uses native BN254 host functions (CAP-80) for on-chain curve-point
# validation of Barretenberg UltraHonk KZG opening commitments.

[workspace]
members = [
    "./zk-payroll",
    "./zk-verifier",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "26.1.0"

[profile.release]
opt-level     = "z"
overflow-checks = true
debug           = 0
strip           = "symbols"
debug-assertions = false
panic           = "abort"
codegen-units   = 1
lto             = true
