# Payroll Contract Dependencies
# 
# Core payroll processing contract for ZetaPay.
# Handles batch payroll with ZK proof verification.
# 
# # Features
# - Batch processing with atomic transfers
# - ZK proof verification via verifier contract
# - Merkle tree integration for employee verification
# - Retry mechanism for failed payments
# - Full event logging for audit trail

[package]
name = "zetapay-payroll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
