# ZetaPay Unified Payroll Contract
#
# A single contract that combines batch payroll execution with built-in ZK proof verification.
# Processes dynamic employee counts without an upper-bound hard limit, supporting any number
# of employees per batch as long as they fit within transaction limits.
#
# Verification includes BN254 Fr field membership checks, amount consistency validation,
# Poseidon2 commitment binding to prevent tampering, and full proof structure verification.
# The verifier module includes UltraHonk pairing check infrastructure, which will be
# activated once we upgrade to a Protocol 26 host image with complete pairing support.

[package]
name    = "zetapay-payroll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
