# ZetaPay Unified Payroll Contract
#
# A single contract that combines batch payroll execution with built-in ZK proof verification.
# Processes dynamic employee counts without an upper-bound hard limit, supporting any number
# of employees per batch as long as they fit within transaction limits.
#
# Verification uses Protocol 26 (soroban-sdk v26) native BN254 host functions (CAP-80):
# - g1_is_on_curve: validates the KZG opening points from every Barretenberg UltraHonk proof
# - Upgrade path to full pairing_check + g1_msm is documented in verifier.rs

[package]
name    = "zetapay-payroll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
