[package]
name = "zk-payroll"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
zk-verifier = { path = "../zk-verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }